<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="academy.learnprogramming.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/scrollView2"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="106dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/dateTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:id="@+id/tblTaskContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="97dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="9dp"
        android:text="@string/addAppointButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="478dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
