<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="academy.learnprogramming.AddAppointmentFragment">

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="16dp" />

    <Spinner
        android:id="@+id/spnTaskType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:entries="@array/task_type"
        android:gravity="center_vertical|center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskName"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/txttvDate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="118dp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/spnTaskType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txtvTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Large"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="161dp"
        android:textAlignment="center"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/txttvDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/btnCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="446dp" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="14dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/addAppointButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="447dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
